objects/SBQQ__PriceRule__c.object
<CustomObject>
    <customHelpPage>SBQQ__PriceRuleHelp</customHelpPage>
    <description>Rule that affects pricing for an option or quote line</description>
    <fields>
        <fullName>SBQQ__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this rule is active or not.</description>
        <inlineHelpText>Indicates whether this rule is active or not.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ConditionsMet__c</fullName>
        <description>Logical operator. All is AND; Any is OR</description>
        <inlineHelpText>Choose the behavior for your conditions: All is AND; Any is OR</inlineHelpText>
        <label>Conditions Met</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>Any</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__EvaluationOrder__c</fullName>
        <description>Order in which this price rule is evaluated.</description>
        <inlineHelpText>Specify order of evaluation for this price rule. Higher ordered rules are evaluated last which means they &quot;win&quot; in case of conflict.</inlineHelpText>
        <label>Evaluation Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Optional field that makes this rule specific to the product.</description>
        <inlineHelpText>Optional field that makes this rule specific to the product.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Price Rules</relationshipLabel>
        <relationshipName>PriceRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__TargetObject__c</fullName>
        <description>Object that’s the target of field update.</description>
        <inlineHelpText>Object that’s the target of field update.</inlineHelpText>
        <label>Target Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote Line</fullName>
                </value>
                <value>
                    <fullName>Product Option</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Price Rule</label>
    <listViews>
        <fullName>Panel1_PriceRule</fullName>
        <filterScope>Queue</filterScope>
        <label>Panel1</label>
        <queue>Panel1</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SBQQ__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Price Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>